# egile-mcp-x-post-creator

./: .env.example  .gitignore  INSTALL.md  LLM_INTEGRATION.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  example.py  example_with_llm.py  install.bat  install.sh  pyproject.toml  test_mcp.py
src/egile_mcp_x_post_creator/: __init__.py  __main__.py  server.py  x_service.py
